--- a/index.html
+++ b/index.html
@@ -494,6 +494,8 @@
 
         }
         </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbVYboiwRprB_zkvFrzWCJzeyMXiRrt1s&callback=initMap"
+        type="text/javascript"></script>
 
         <div class="event">
           <span class="element_2" style="white-space:pre"></span>
