--- a/index.html
+++ b/index.html
@@ -494,9 +494,7 @@
 
         }
         </script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbVYboiwRprB_zkvFrzWCJzeyMXiRrt1s&callback=initMap"
-        type="text/javascript"></script>
-
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjdYKe8uxABociBdYaoRQRzptrpoMs6is&callback=initMap"type="text/javascript"></script>
         <div class="event">
           <span class="element_2" style="white-space:pre"></span>
         </div>
