--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="html, css, hse, design, art, gif, punk, music, pink">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://thecureq.github.io/letigre.github.io/">
     <meta property="og:title" content="LE TIGRE">
     <meta property="og:description" content="Интерактивный сайт посвященный панк-группе LE TIGRE">
     <meta property="og:image" content="http://myidem.moscow/anyatidebil/share.png">
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="icon" type="image/png" href="img/favicon.png" />
-    <!-- <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script> -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="javascripts/jquery.onepage-scroll.js"></script>
     <script type="text/javascript" src="javascripts/typed.js"></script>
