--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="html, css, hse, design, art, gif, punk, music">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://thecureq.github.io/letigre.github.io/">
     <meta property="og:title" content="LE TIGRE">
     <meta property="og:description" content="Интерактивный сайт посвященный панк-группе LE TIGRE">
     <meta property="og:image" content="http://myidem.moscow/anyatidebil/share.png">
