--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-  <audio src="bg.mp3" autoplay="autoplay" loop="loop"></audio>
+  <audio src="bg.mp3" autoplay="autoplay" loop="loop" volume="-100"></audio>
     <div class="main">
       <div id="wrapper">
         <nav class="fullscreen-nav">
