--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="javascripts/text.js"></script>
     <script type="text/javascript" src="javascripts/onepagescroll.js"></script>
     <script type="text/javascript" src="javascripts/nav_icon.js"></script>
+    <script type="text/javascript" src="javascripts/likely.js"></script>
 
     <title>LE TIGRE</title>
 
@@ -121,6 +122,12 @@
           };
         });
         </script>
+        <div class="likely likely-small">
+          <p>TELL YOUR FRIENDS</p>
+          <div class="facebook">Поделиться</div>
+          <div class="vkontakte">Поделиться</div>
+          <div class="telegram">Отправить</div>
+        </div>
       </section>
   </div>
 </body>
